--- a/package.json
+++ b/package.json
@@ -18,10 +18,20 @@
   },
   "homepage": "https://github.com/cpatel1999/E-Commerce-Web-Application-using-MERN-stack#readme",
   "dependencies": {
-    "dotenv": "^16.0.3",
-    "express": "^4.18.2",
+    "bcrypt": "^5.1.0",
+    "body-parser": "^1.19.0",
+    "cookie-parser": "^1.4.4",
+    "cors": "^2.8.5",
+    "dotenv": "^8.0.0",
+    "express": "^4.16.4",
+    "express-jwt": "^5.3.1",
+    "express-validator": "^5.3.1",
+    "formidable": "^1.2.1",
+    "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.11",
     "mongoose": "^5.5.5",
-    "nodemon": "^2.0.20",
-    "uuid": "^9.0.0"
+    "morgan": "^1.9.1",
+    "nodemon": "^1.19.0",
+    "uuid": "^3.3.2"
   }
 }
